Update angular/cli, styles, npm install bootstrap, add parts from template

--- a/frontend/angular-ecommerce/src/index.html
+++ b/frontend/angular-ecommerce/src/index.html
@@ -4,13 +4,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-  <title>AngularEcommerce</title>
+  <title>luv2shop - Full Stack eCommerce: ANgular and Spring Boot</title>
   <base href="/">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!--href="favicon.ico '=2' any query to avoid caching issues -->
+  <link rel="icon" type="image/x-icon" href="favicon.ico=2">
 </head>
 <body>
   <app-root></app-root>
 </body>
 </html>
+<!-- npm install bootstrap (npm audit fix
+     npm install @fortawesome/fontawesome-free -->
